Fixed DataApp scrolling on iOS

--- a/client/src/containers/DataApp/DataApp.css
+++ b/client/src/containers/DataApp/DataApp.css
@@ -12,6 +12,7 @@
     height: 100%;
     padding-top: 55px;
     overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
